.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/Product_Config_Rule_Setup__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Custom Setting to configure conditional required field for Product Configurations</description>
    <fields>
        <fullName>Controlling_Field_API_Name__c</fullName>
        <description>Controlling Field API Name</description>
        <inlineHelpText>Controlling Field API Name (set value as &quot;None&quot; to set depenedet field non required under all cases)</inlineHelpText>
        <label>Controlling Field API Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dependent_Field_API_Name__c</fullName>
        <description>Dependent Field API Name</description>
        <inlineHelpText>Dependent Field API Name</inlineHelpText>
        <label>Dependent Field API Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_SKU_Name__c</fullName>
        <description>Name of Product/SKU (Set value as All to apply condition to all SKU)</description>
        <inlineHelpText>Name of Product/SKU (Set value as All to apply condition to all SKU)</inlineHelpText>
        <label>Product/SKU Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule_Type__c</fullName>
        <description>Type of rule. Supported values (Exception, Conditional Required)</description>
        <inlineHelpText>Supported values (Exception, Conditional Required)</inlineHelpText>
        <label>Rule Type</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Product Config Rule Setup</label>
</CustomObject>